tests/baselines/reference/importDeclWithExportModifierAndExportAssignmentInAmbientContext.errors.txt
importDeclWithExportModifierAndExportAssignmentInAmbientContext.ts(7,5): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== importDeclWithExportModifierAndExportAssignmentInAmbientContext.ts (1 errors) ====
    declare module "m" {
        module x {
            interface c {
            }
        }
        export import a = x.c;
        export = x;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }